# Slitherpy

./: LICENSE  README.md  setup.cfg  test.py
source/: assertion.py
source/Slitterpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/cases/: base.py  declarations.py
source/modifiers/: skip.py
source/slitterpy/: status.py  utils.py
source/slitterpy/cases/: declarations.py
tests/: test_basic.py  test_declarations.py
