[metadata]
name = slitterpy
version = 0.0.1
author = Devsoup1
author_email = soupsgamer@gmail.com
description = A Unittesting Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soupsgamer/Slitherpy
project_urls =
    Bug Tracker = https://github.com/soupsgamer/Slitherpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = source
packages = find:
python_requires = >=3.6

[options.packages.find]
where = source